tests/typing/errors/mismatch/test_tptp.p
% Mismatch between types

tff(a, type, a : $int).
tff(p, type, p : $i > $o).

tff(error, axiom, p(a) ).

